--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://github.com/Dev-Sharma-197/keep-note.github.io.git",
+  "homepage": "http://Dev-Sharma-197.github.io/keep-notes",
   "dependencies": {
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
@@ -14,10 +14,10 @@
     "save-dev": "^0.0.1-security"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "browserslist": {
     "production": [
